--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,8 @@ body {
 .btn {
   background-color: none;
   color: white;
-  width: 15px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   font-size: 10px;
   float: right;
@@ -13,16 +14,15 @@ body {
 }
 
 .pages {
-  width: 55px;
-  height: 70px;
+  width: 130px;
+  height: 170px;
   background-color: rgb(7, 105, 105);
   color: rgb(255, 255, 255);
   border-radius: 5%;
   float: right;
-  margin: 9px 2.5px 0 0;
+  margin: 20px 5px 0 0;
   opacity: 0;
   display: none;
-  transition: opacity 500ms ease-in-out;
 }
 
 a {
@@ -30,49 +30,71 @@ a {
   text-decoration: none;
   color: white;
   margin: 10px 0 5px 5px;
-  font-size: 15px;
+  font-size: 35px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   display: flex;
 }
 
 .container {
   color: white;
-  width: 200px;
-  height: 250px;
+  width: 400px;
+  height: 550px;
   background-color: rgb(5, 7, 27);
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 7px;
   text-align: center;
 }
 
-.des {
-  font-size: 12px;
+span {
+  font-size: 23px;
+  margin: 20px;
 }
 
 label {
-  margin: 7px 0 10px 10px;
-  display: flex;
+  margin: 30px 0 30px 10px;
+  display: block;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
 }
 
 input {
   border-radius: 10px;
   border: none;
   outline: none;
+  font-size: 25px;
 }
 
 .submit {
-  margin: 20px 0 0 80px;
-  display: flex;
-  border: none;
-  border-radius: 3px;
-  font-size: 20px;
+  margin-top: 40px;
+  border-radius: 30px;
+  background: #fee996;
+  border: 0;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.5em;
+  padding: 10px 16px;
+  letter-spacing: 2px;
+  width: 100px;
+  background-color: chartreuse;
+}
+
+.sgn {
+  margin-top: 100px;
+  border-radius: 36px;
+  background: #fee996;
+  border: 0;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.5em;
+  padding: 10px 16px;
+  letter-spacing: 2px;
+  background-color: chartreuse;
 }
 
 hr {
   background-color: white;
   height: 1px;
-  width: 190px;
+  width: 270px;
   border: none;
 }
 
@@ -100,36 +122,18 @@ hr {
   background-color: rgb(255, 0, 0);
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-bottom: 20px;
+.nav {
+  width: 130px;
+  height: 170px;
   background-color: rgb(17, 17, 141);
-  border-radius: 1%;
-}
-
-nav ul{
-  display: flex;
-  align-items: center;
-}
-
-nav li{
-  margin-left: 20px;
-}
-
-nav li a{
-  text-transform: uppercase;
-  font-size: 0.8em;
-  display: block;
-  padding: 10px 16px;
-  letter-spacing: 1px;
-}
-
-/*.nav {
+  color: rgb(255, 255, 255);
+  border-radius: 5%;
+  float: right;
+  margin: 20px 5px 0 0;
   opacity: 1;
   display: block;
-}*/
+  transition: opacity 500ms ease-in-out;
+}
 
 @keyframes ani {
   0% {
@@ -142,25 +146,25 @@ nav li a{
 
 .items,
 .names {
-  font-size: 10px;
+  font-size: 25px;
   list-style-type: none;
-  margin-top: 13px;
+  margin-top: 25px;
   cursor: pointer;
   background-color: rgb(39, 39, 109);
   border-radius: 10px;
-  height: 13px;
-  width: 100px;
+  height: 30px;
+  width: 260px;
   text-align: center;
 }
 
 .fol_ul {
-  padding-left: 8px;
-  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-bottom: 50px;
 }
 
 .folders {
   color: white;
-  width: 110px;
+  width: 300px;
   height: auto;
   background-color: rgb(19, 24, 82);
   font-family: Arial, Helvetica, sans-serif;
@@ -210,26 +214,14 @@ nav li a{
 }
 
 .white {
-  color:wheat
+  color: wheat;
 }
 
-.sgn{
-  margin-top: 30px;
-  border-radius: 36px;
-  background: #FEE996;
-  border:0;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 0.8em;
-  display: block;
-  padding: 10px 16px;
-  letter-spacing: 2px;
-}
-
-ul{
+ul {
   list-style-type: none;
 }
 
-h2{
+h2 {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 60px;
 }
