--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -15,22 +15,17 @@
     />
   </head>
   <body>
-    <nav>
-      <h1><a href="/">Ninja Smoothies</a></h1>
-      <ul>
-        <% if (user) { %>
-          <li>Welcome, <%= user.email %></li>
-          <li><a href="/logout">Log out</a></li>
-        <% } else { %>
-          <li><a href="/login">Log in</a></li>
-        <% } %>
-      </ul>
-    </nav>
+
     
-    <div class="btn"><i class="fas fa-bars"></i></div>
+    <div class="btn"><i class="fas fa-bars fa-3x"></i></div>
     <div class="pages">
       <a href="/" class="home">Home</a>
       <a href="/add" class="add">Add</a>
+        <% if (user) { %>
+      <a href="/logout" class="logout">Log out</a></li>
+        <% } else { %>
+      <a href="/login" class="login">Log in</a></li>
+        <% } %>
     </div>
   </body>
 </html>
