--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,7 +20,9 @@
     <div class="btn"><i class="fas fa-bars fa-3x"></i></div>
     <div class="pages">
       <a href="/" class="home">Home</a>
+      <hr class="separator">
       <a href="/add" class="add">Add</a>
+      <hr class="separator">
         <% if (user) { %>
       <a href="/logout" class="logout">Log out</a></li>
         <% } else { %>
